--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,9 @@
     "ts-node-dev": "^2.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.0",
-    "@types/bcrypt": "^5.0.3",
-    "@types/jsonwebtoken": "^9.0.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/cors": "^2.8.13",
+    "@types/nodemailer": "^6.4.8"
   }
 }
