--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,19 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.0.0",
+    "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "axios": "^1.4.0"
-    ,"@supabase/supabase-js": "^2.0.0"
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "vite": "^5.2.1",
-    "typescript": "^5.3.0",
-    "tailwindcss": "^3.5.4",
+    "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.14"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.3.0",
+    "vite": "^5.2.1"
   }
 }
