✅ Complete Phase 2 Tasks 2.1 & 2.2: Admin Dashboard with Company Management
### Completed Features:

**Task 2.1 - Admin Dashboard Layout with Navigation:**
- ✅ Collapsible sidebar with 4 navigation tabs (Dashboard, Companies, Applications, Logs)
- ✅ Top navigation bar with user info and logout
- ✅ Stats cards displaying real-time metrics
- ✅ Responsive design with Tailwind CSS
- ✅ Professional UI following charte graphique colors

**Task 2.2 - View All Companies (table with search/filter):**
Backend Implementation:
- ✅ Created company.routes.ts with 6 admin-only endpoints:
  - GET /api/companies - List with pagination, search, filter
  - GET /api/companies/:id - Get single company details
  - POST /api/companies - Create new company
  - PATCH /api/companies/:id/status - Update company status
  - DELETE /api/companies/:id - Delete company (cascade)
  - POST /api/companies/:id/reset-password - Reset password
- ✅ Added requireRole(['ADMIN']) middleware for RBAC
- ✅ Implemented pagination (page, limit, total, totalPages)
- ✅ Search by company name or email (case-insensitive)
- ✅ Filter by status (all/active/inactive/suspended)

Frontend Implementation:
- ✅ Companies table with 7 columns (name, email, status, payment, jobs, date, actions)
- ✅ Real-time search bar with debounced filtering
- ✅ Status filter dropdown (all/active/inactive/suspended)
- ✅ Pagination controls with page numbers
- ✅ Inline status update dropdown for each company
- ✅ Delete button with confirmation dialog
- ✅ Color-coded status badges (green/yellow/red)
- ✅ Color-coded payment badges (green/yellow/red)
- ✅ Loading spinner and empty states
- ✅ Responsive table design

Database Changes:
- ✅ Updated Company model in schema.prisma:
  - Added companyName field
  - Added status (CompanyStatus enum: ACTIVE, INACTIVE, SUSPENDED)
  - Added paymentStatus (PaymentStatus enum: PAID, PENDING, FAILED)
  - Added updatedAt timestamp with @updatedAt
  - Added onDelete: Cascade to User relation
- ✅ Created migratio

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "node",
+    "moduleResolution": "node10",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "forceConsistentCasingInFileNames": true,
+    "ignoreDeprecations": "6.0"
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "prisma"]
 }
