--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
     "prisma:seed": "ts-node ./prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.0.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.3",
     "prisma": "^5.0.0"
