--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@supabase/supabase-js": "^2.0.0",
+    "backblaze-b2": "^1.7.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -20,14 +21,17 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.3",
     "prisma": "^5.0.0"
   },
   "devDependencies": {
+    "@types/backblaze-b2": "^1.5.6",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.6.0",
     "@types/nodemailer": "^6.4.8",
     "@types/pg": "^8.15.6",
